@@ -3,3 +3,8 @@ exportPattern("^ocl")
 exportPattern("clFloat$")
 S3method(print, clDeviceID)
 S3method(print, clPlatformID)
+S3method(print, clContext)
+S3method(print, clKernel)
+S3method(names, clKernel)
+S3method(`$`, clKernel)
+S3method(`$<-`, clKernel)
