@@ -6,10 +6,28 @@ print.clDeviceID <- function(x, ...) {
 
 print.clPlatformID <- function(x, ...) {
   i <- .Call("ocl_get_platform_info", x)
-  cat(" OpenCl platform '", i$name, "'\n", sep='')
+  cat(" OpenCL platform '", i$name, "'\n", sep='')
   x
 }
 
+print.clContext <- function(x, ...) {
+  cat(" OpenCL context ")
+  print.default(x, ...)
+  x
+}
+
+names.clKernel <- function(x) names(attributes(x))
+`$.clKernel` <- function(x, name) attr(x, name)
+`$<-.clKernel` <- function(x, name, value) stop("clKernel properies are read-only")
+print.clKernel <- function(x, ...) {
+  cat(" OpenCL kernel '", attr(x, "name"),"'\n", sep='')
+  a <- attributes(x)
+  a$class <- NULL
+  a$name <- NULL
+  print(a)
+  x
+}
+  
 oclPlatforms <- function() .Call("ocl_platforms")
 oclDevices <- function(platform = oclPlatforms()[[1]], type="default") .Call("ocl_devices", platform, type)
 oclSimpleKernel <- function(device, name, code, precision = c("single", "double", "best")) {
